protocols/tests/identities/identity_d2/two_different_assignments_error.out
error: Thread 1 attempted conflicting assignment to 'a': current=ValueOwned(00000000000000000000000000000001), new=ValueOwned(00000000000000000000000000000010)
  ┌─ identities/identity_d2/identity_d2.prot:9:3
  │
9 │   DUT.a := a;
  │   ^^^^^^^^^^^ Thread 1 attempted conflicting assignment to 'a': current=ValueOwned(00000000000000000000000000000001), new=ValueOwned(00000000000000000000000000000010)

